RESOLVED FIXED271611
[GStreamer][MSE] Leaks seek events
https://bugs.webkit.org/show_bug.cgi?id=271611
Summary [GStreamer][MSE] Leaks seek events
Philippe Normand
Reported 2024-03-24 11:59:09 PDT
The event ref passed to the send_event vfunc is transfer-full, so we leak events in webKitMediaSrcSendEvent().
Attachments
Philippe Normand
Comment 1 2024-03-25 02:34:13 PDT
EWS
Comment 2 2024-03-25 05:53:20 PDT
Committed 276621@main (d1482329e9e2): <https://commits.webkit.org/276621@main> Reviewed commits have been landed. Closing PR #26400 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-03-25 05:54:13 PDT
Note You need to log in before you can comment on or make changes to this bug.