[GStreamer][MSE] Leaks seek events https://bugs.webkit.org/show_bug.cgi?id=271611

Reviewed by Alicia Boya Garcia.

The event ref passed to the send_event vfunc is transfer-full, so it needs to be adopted. When
chaining to the parent class we transfer it back.

* Source/WebCore/platform/graphics/gstreamer/mse/WebKitMediaSourceGStreamer.cpp:
(webKitMediaSrcSendEvent):

Canonical link: https://commits.webkit.org/276621@main